--- a/build.html
+++ b/build.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -115,7 +115,7 @@
       <div class="div-block-1375">
         <div style="opacity:0" class="comparision-parent wp">
           <div class="div-block-1380">
-            <div class="div-block-1378"><img src="images/word-press-logo.svg" loading="lazy" alt="The WordPress logo" class="image-44"></div>
+            <div class="div-block-1378"><img src="images/word-press-logo.svg" loading="lazy" alt="" class="image-44"></div>
             <div class="div-block-1379">
               <div class="text-block-36">14 <span class="text-span-7">seconds</span></div>
               <div class="text-block-37">Average publication load time</div>
@@ -124,7 +124,7 @@
         </div>
         <div style="opacity:0" class="comparision-parent jraft">
           <div class="div-block-1380">
-            <div class="div-block-1378"><img src="images/Jraft-Logomark-White.svg" loading="lazy" alt="" class="image-44"></div>
+            <div class="div-block-1378"><img src="images/Jraft-Logomark-White.svg" loading="lazy" alt="Jraft&#x27;s logomark in white" class="image-44"></div>
             <div class="div-block-1379">
               <div class="text-block-36 white">2.8 <span class="text-span-7">seconds</span></div>
               <div class="text-block-37 white">Average Jraft load time</div>
@@ -148,11 +148,11 @@
           <h3 class="heading-7">Insert a block</h3>
           <div class="text-block-38">Jraft comes with <span class="emphasise">over 100+, professionally designed blocks for you to stack.</span> For those handy with code, upload, reuse, and share your blocks with your entire team. Forget hassling tech teams to make a font the perfect shade of grey — Jraft’s builder allows them to make changes to your code on the fly.<br></div>
         </div>
-        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-3.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-3-p-500.png 500w, images/Mobile-Builder-Screen-3-p-800.png 800w, images/Mobile-Builder-Screen-3-p-1080.png 1080w, images/Mobile-Builder-Screen-3.png 1280w" alt="" class="header-mobile-photo">
+        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-3.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-3-p-500.png 500w, images/Mobile-Builder-Screen-3-p-800.png 800w, images/Mobile-Builder-Screen-3-p-1080.png 1080w, images/Mobile-Builder-Screen-3.png 1280w" alt="Jraft&#x27;s publication building functionality connecting content types" class="header-mobile-photo">
           <h3 class="heading-7">Connect your content</h3>
           <div class="text-block-38">Easily establish relationships between content categories and page sections to dynamically update your new content. Header tags pre-applied with the block so you can forget about manually adding SEO tags.<br></div>
         </div>
-        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-4.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-4-p-500.png 500w, images/Mobile-Builder-Screen-4-p-800.png 800w, images/Mobile-Builder-Screen-4-p-1080.png 1080w, images/Mobile-Builder-Screen-4.png 1280w" alt="" class="header-mobile-photo">
+        <div class="feat-walkthrough-text-parent builder"><img src="images/Mobile-Builder-Screen-4.png" loading="lazy" width="435" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 100vw" srcset="images/Mobile-Builder-Screen-4-p-500.png 500w, images/Mobile-Builder-Screen-4-p-800.png 800w, images/Mobile-Builder-Screen-4-p-1080.png 1080w, images/Mobile-Builder-Screen-4.png 1280w" alt="Jraft&#x27;s publication building software with editing features showing" class="header-mobile-photo">
           <h3 class="heading-7">Style it with ease</h3>
           <div class="text-block-38">Style any part of the block to fit your fancy. From adding your logo to changing fonts and background colours, <span class="emphasise">all blocks are easily customisable</span> with Jraft exporting clean HTML &amp; CSS.</div>
         </div>
@@ -182,7 +182,7 @@
         <div class="text-block-46">Like our page builder, Jraft&#x27;s article builder comes with a variety of professionally designed templates for you to customise. From font size to custom drop caps and pull quotes, Jraft allows you to adapt the styling of an article template to suit every style of publication and any screen size.<br></div>
       </div>
       <div data-w-id="609e9c2b-f3cf-991f-0436-7c730b6fc04e" class="div-block-1404">
-        <div class="div-block-1413"><img src="images/Article-Builder.png" loading="lazy" width="400" sizes="(max-width: 479px) 90vw, (max-width: 767px) 95vw, (max-width: 991px) 85vw, 86vw" srcset="images/Article-Builder-p-500.png 500w, images/Article-Builder-p-800.png 800w, images/Article-Builder-p-1080.png 1080w, images/Article-Builder.png 1244w" alt="" class="image-49"></div>
+        <div class="div-block-1413"><img src="images/Article-Builder.png" loading="lazy" width="400" sizes="(max-width: 479px) 90vw, (max-width: 767px) 95vw, (max-width: 991px) 85vw, 86vw" srcset="images/Article-Builder-p-500.png 500w, images/Article-Builder-p-800.png 800w, images/Article-Builder-p-1080.png 1080w, images/Article-Builder.png 1244w" alt="Jraft&#x27;s article design functionality" class="image-49"></div>
         <div class="photo-bg-colour testimonial-bruce"></div>
       </div>
     </div>
@@ -221,21 +221,21 @@
       </div>
       <div class="div-block-1395-copy">
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/images.svg" loading="lazy" alt="Symbol of photos"></div>
+          <div class="div-block-1407"><img src="images/images.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Next-gen image optimisation<br></h4>
             <div class="text-block-43">Paying for optimisation plugins? Jraft  automatically resizes, optimises and converts all images to WebP, a next gen image format 35+% smaller than JPEG with no quality loss.<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/speedometer-outline.svg" loading="lazy" alt="A symbol of a speedometer"></div>
+          <div class="div-block-1407"><img src="images/speedometer-outline.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Extreme performance<br></h4>
             <div class="text-block-43">Jraft&#x27;s block based approach allows us to output ultra optimised code which loads 50%+ faster than the New York Times for ultimate SEO<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/search-circle-outline.svg" loading="lazy" alt="A symbol of a search icon in a circle"></div>
+          <div class="div-block-1407"><img src="images/search-circle-outline.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Perfect SEO — without plugins<br></h4>
             <div class="text-block-43">Jraft has all the fundamental technical modern SEO features built in. Metadata controls, automatic XML sitemaps, RPC pings, robots.txt + more — no plugins necessary.<br></div>
@@ -251,7 +251,7 @@
     <div class="div-block-13">
       <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/word-press-logo.svg" loading="lazy" alt="The WordPress logo"></div>
+          <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">WordPress</h4>
@@ -260,7 +260,7 @@
       <div class="div-block-30"></div>
       <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/wix-logo.svg" loading="lazy" alt="The Wix Logo"></div>
+          <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">Wix</h4>
@@ -328,7 +328,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
