--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -113,7 +113,7 @@
         <div class="text-block-11">Actual <a href="https://developers.google.com/speed/pagespeed/insights/" target="_blank" class="link">Google PageSpeed Insights</a> Test results for a Jraft publication</div>
         <div>
           <div class="div-block-126">
-            <div class="div-block-127"><img src="images/pagespeed.svg" loading="lazy" alt="Google Pagespeed Score of 91" class="image-14"></div>
+            <div class="div-block-127"><img src="images/pagespeed.svg" loading="lazy" alt="91 pagespeed extreme performance" class="image-14"></div>
             <div class="text-block-12">Google Pagespeed performance grade</div>
           </div>
         </div>
@@ -130,9 +130,9 @@
     <div class="div-block-25">
       <div class="hosting-div-2">
         <div class="hosting-div-2-image">
-          <div class="div-block-131"><img src="images/AWS.svg" loading="lazy" alt="Logo of Amazon Web Services" class="image-18"></div>
+          <div class="div-block-131"><img src="images/AWS.svg" loading="lazy" alt="Amazon Web Services Logo" class="image-18"></div>
           <div class="spacer-hosting-div-2"></div>
-          <div class="div-block-131"><img src="images/cloudfront.svg" loading="lazy" alt="Logo of Amazon CloudFront" class="image-19"></div>
+          <div class="div-block-131"><img src="images/cloudfront.svg" loading="lazy" alt="Amazon CloudFront Logo" class="image-19"></div>
         </div>
         <div class="hosting-subdiv-text">
           <h2 class="text-block-13">Powered by <br>Amazon Web Services &amp; CloudFront</h2>
@@ -158,17 +158,17 @@
     </div>
     <div class="feature-detail-div">
       <div class="hosting-feature-detail">
-        <div class="photo-2"><img src="images/network-illustration.svg" loading="lazy" alt="An abstract illustration of nodes" class="image-62"></div>
+        <div class="photo-2"><img src="images/network-illustration.svg" loading="lazy" alt="" class="image-62"></div>
         <h2 class="feature-detail-heading">130+ datacentres &amp; servers worldwide</h2>
         <div class="feature-detail-description">To ensure your publication loads fast. For everyone (yes, seriously everyone).</div>
       </div>
       <div class="hosting-feature-detail">
-        <div class="photo-2"><img src="images/scalability.svg" loading="lazy" alt="Multiple arrows pointing up" class="image-63"></div>
+        <div class="photo-2"><img src="images/scalability.svg" loading="lazy" alt="" class="image-63"></div>
         <h2 class="feature-detail-heading">Infinitely scalable server fleet</h2>
         <div class="feature-detail-description">So when you go viral, your publication stays up without a hitch.</div>
       </div>
       <div class="hosting-feature-detail">
-        <div class="photo-2"><img src="images/security.svg" loading="lazy" alt="A lock with a check mark" class="image-20"></div>
+        <div class="photo-2"><img src="images/security.svg" loading="lazy" alt="" class="image-20"></div>
         <h2 class="feature-detail-heading">SSL comes standard</h2>
         <div class="feature-detail-description">For free. So you enjoy better SEO, and your readers never have to experience those annoying security warnings.</div>
       </div>
@@ -184,7 +184,7 @@
     </div>
     <div class="feature-detail-div">
       <a href="create.html" class="div-block-134 w-inline-block">
-        <div class="photo-class"><img src="images/Hosting-Comp-1.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-1-p-500.jpeg 500w, images/Hosting-Comp-1-p-800.jpeg 800w, images/Hosting-Comp-1-p-1080.jpeg 1080w, images/Hosting-Comp-1.jpg 1600w" alt="A screenshot of Jraft&#x27;s collaborative editing software" class="image-21"></div>
+        <div class="photo-class"><img src="images/Fake-Newspaper-Logo.svg" loading="lazy" width="800" alt="" class="image-21"></div>
         <div class="div-block-135">
           <h2 class="class-1">Writers &amp; Editors</h2>
           <div class="class-2">Publish and style beautiful articles that stand out in minutes from the Editor, without relying on developers.</div>
@@ -193,7 +193,7 @@
         </div>
       </a>
       <a href="build.html" class="div-block-134 w-inline-block">
-        <div class="photo-class"><img src="images/Hosting-Comp-2.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-2-p-500.jpeg 500w, images/Hosting-Comp-2-p-800.jpeg 800w, images/Hosting-Comp-2-p-1080.jpeg 1080w, images/Hosting-Comp-2.jpg 1600w" alt="A screenshot of Jraft&#x27;s website builder software" class="image-22"></div>
+        <div class="photo-class"><img src="images/Hosting-Comp-2.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-2-p-500.jpeg 500w, images/Hosting-Comp-2-p-800.jpeg 800w, images/Hosting-Comp-2-p-1080.jpeg 1080w, images/Hosting-Comp-2.jpg 1600w" alt="Jraft&#x27;s website builder software" class="image-22"></div>
         <div class="div-block-135">
           <h2 class="class-1">Publishers &amp; Designers</h2>
           <div class="class-2">Create your dream publication from scratch, and link your content categories to your front page without a line of code.</div>
@@ -210,32 +210,32 @@
     </div>
     <div class="w-layout-grid grid">
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/form.svg" loading="lazy" alt="Symbol of a paper plane"></div>
+        <div class="div-block-31"><img src="images/form.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">Custom forms</h4>
         <div class="feature-detail-description">Integrate your favourite mail provider like Mailchimp to collect reader emails to create email subscribers.</div>
       </div>
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/search-circle-outline.svg" loading="lazy" alt="A symbol of a search icon in a circle"></div>
+        <div class="div-block-31"><img src="images/search-circle-outline.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">Built-in professional SEO</h4>
         <div class="feature-detail-description">Keep your SEO in check with XML sitemaps and customisable meta-tags — no plugins needed.</div>
       </div>
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/integrations.svg" loading="lazy" alt="A symbol for integrations"></div>
+        <div class="div-block-31"><img src="images/integrations.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">Integrate anything</h4>
         <div class="feature-detail-description">Easily integrate Google Analytics, Google Optimize, and other marketing tools by dropping custom code snippets in your site.</div>
       </div>
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/search-circle-outline.svg" loading="lazy" alt="A symbol of a search icon in a circle"></div>
+        <div class="div-block-31"><img src="images/search-circle-outline.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">Awesome site search</h4>
         <div class="feature-detail-description">Hyper-fast full site search is built into your publication. Powered by MeiliSearch, a faster and powerful alternative to ElasticSearch.</div>
       </div>
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/plug-in-noun-project-4032.svg" loading="lazy" alt="A symbol of a plug and socket"></div>
+        <div class="div-block-31"><img src="images/plug-in-noun-project-4032.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">Zero maintenance</h4>
         <div class="feature-detail-description">No updates to run, packages to install, or headaches to deal with. Just publish your site and let us take care of the rest.</div>
       </div>
       <div class="feature-detail more hosting">
-        <div class="div-block-31"><img src="images/uptime.svg" loading="lazy" alt="An arrow pointing up"></div>
+        <div class="div-block-31"><img src="images/uptime.svg" loading="lazy" alt=""></div>
         <h4 class="feature-detail-heading">99.9% uptime SLA</h4>
         <div class="feature-detail-description">We’re so confident your site won’t go down we’ll reimburse you if it does, whatever plan you’re on — something unheard of in managed hosts.</div>
       </div>
@@ -248,7 +248,7 @@
     <div class="div-block-13">
       <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/word-press-logo.svg" loading="lazy" alt="The WordPress logo"></div>
+          <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">WordPress</h4>
@@ -257,7 +257,7 @@
       <div class="div-block-30"></div>
       <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/wix-logo.svg" loading="lazy" alt="The Wix Logo"></div>
+          <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">Wix</h4>
@@ -330,7 +330,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
