--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index.html" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -109,10 +109,10 @@
           <h2 class="heading-19">Manage</h2>
           <h3 class="heading-18">See your whole workflow at a glance. Ditch the spreadsheet and <a href="manage.html" class="landing-feature-link title-description">manage your editorial workflow 2x faster.</a></h3>
         </div>
-        <div data-w-id="092d83da-ade2-aca2-7647-7fc24e1f2e45" style="opacity:0" class="div-block-1432"><img src="images/Foyster-Media.svg" loading="lazy" alt="" class="image-59">
+        <div data-w-id="092d83da-ade2-aca2-7647-7fc24e1f2e45" style="opacity:0" class="div-block-1432"><img src="images/Foyster-Media.svg" loading="lazy" alt="Foyster Media logo" class="image-59">
           <div class="text-block-54">&quot;Jraft is a game changer. Collaboration in Jraft knocks WordPress out of the park and lets us have a single source of truth.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Robyn.png" loading="lazy" width="48" height="48" alt=""></div>
+            <div class="div-block-1440"><img src="images/Robyn.png" loading="lazy" width="48" height="48" alt="Robyn Foyster smiling"></div>
             <div class="div-block-1441">
               <div class="text-block-56">Robyn Foyster</div>
               <div class="text-block-56">CEO, B&amp;T&#x27;s Most Powerful Women in Media</div>
@@ -145,10 +145,10 @@
           <h2 class="heading-19">Build</h2>
           <h3 class="heading-18">Design, build and launch a professional publication in 5 minutes.</h3>
         </div>
-        <div data-w-id="76ae0894-e981-518c-103b-b48f745db5a3" style="opacity:0" class="div-block-1432"><img src="images/The-Studio.svg" loading="lazy" alt="" class="image-59">
+        <div data-w-id="76ae0894-e981-518c-103b-b48f745db5a3" style="opacity:0" class="div-block-1432"><img src="images/The-Studio.svg" loading="lazy" alt="The Studio Logo" class="image-59">
           <div class="text-block-54">“WordPress eat your heart out! Jraft integrates beautiful editorial &amp; turnkey distribution with workflow &amp; monetisation tools tailor-made for both publishers &amp; bloggers.”<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Bruce.jpg" loading="lazy" width="48" height="48" alt=""></div>
+            <div class="div-block-1440"><img src="images/Bruce.jpg" loading="lazy" width="48" height="48" alt="Bruce Tulloch Smiling"></div>
             <div class="div-block-1441">
               <div class="text-block-56">Bruce Tulloch</div>
               <div class="text-block-56">Executive Director</div>
@@ -180,10 +180,10 @@
           <h2 class="heading-19">Write</h2>
           <h3 class="heading-18"><a href="create.html" class="landing-feature-link title-description">Collaborative, visual editing:</a> the editor you&#x27;ve dreamt about.</h3>
         </div>
-        <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b5e" style="opacity:0" class="div-block-1432"><img src="images/NSW-Gov.svg" loading="lazy" alt="" class="image-59">
+        <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b5e" style="opacity:0" class="div-block-1432"><img src="images/NSW-Gov.svg" loading="lazy" alt="NSW Government Logo" class="image-59">
           <div class="text-block-54">&quot;Jraft essentially replaces our tech team and frees our content teams to focus on what they love.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Victor.jpg" loading="lazy" width="48" height="48" alt=""></div>
+            <div class="div-block-1440"><img src="images/Victor.jpg" loading="lazy" width="48" height="48" alt="Victor Cabello Smiling"></div>
             <div class="div-block-1441">
               <div class="text-block-56">Victor Cabello</div>
               <div class="text-block-56">Marketing Manager</div>
@@ -191,7 +191,7 @@
           </div>
         </div>
       </div>
-      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="">
+      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="Jraft&#x27;s collaborative editor in action">
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Collaborative Editing</h3>
@@ -215,10 +215,10 @@
           <h2 class="heading-19">Grow</h2>
           <h3 class="heading-18">Engagement, supercharged. Ad revenue, maximised.</h3>
         </div>
-        <div data-w-id="efc0a1b9-9ce0-c088-9228-3f79444db841" style="opacity:0" class="div-block-1432"><img src="images/Crikey.svg" loading="lazy" alt="" class="image-59">
+        <div data-w-id="efc0a1b9-9ce0-c088-9228-3f79444db841" style="opacity:0" class="div-block-1432"><img src="images/Crikey.svg" loading="lazy" alt="Crikey Logo" class="image-59">
           <div class="text-block-54">&quot;The innovation brought by Jraft fosters the energy and spirit needed in the world of publishing.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="48" height="48" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="48px" alt=""></div>
+            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="48" height="48" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="48px" alt="Peter Fray smiling"></div>
             <div class="div-block-1441">
               <div class="text-block-56">Peter Fray</div>
               <div class="text-block-56">Editor in Chief</div>
@@ -246,19 +246,19 @@
     </div><a href="engagement.html" class="button-2 engagement w-button">Explore Engagement Features</a></div>
   <div class="div-block-1429 end">
     <div class="div-block-1442">
-      <div class="div-block-1443"><img src="images/AWS.svg" loading="lazy" alt="Logo of Amazon Web Services" class="image-61">
+      <div class="div-block-1443"><img src="images/AWS.svg" loading="lazy" alt="Amazon Web Services Logo" class="image-61">
         <div>
           <h4 class="heading-20">Powered by Amazon Web Services</h4>
           <div class="text-block-57">Built to scale, using the same network as Netflix, Pinterest, Airbnb, Slack, and Adobe. <a href="hosting.html" class="landing-feature-link">Jraft scales from the first visitors to first million — instantly</a>.</div>
         </div>
       </div>
-      <div class="div-block-1443"><img src="images/image--reference.svg" loading="lazy" alt="Symbol of image expanding" class="image-61">
+      <div class="div-block-1443"><img src="images/image--reference.svg" loading="lazy" alt="" class="image-61">
         <div>
           <h4 class="heading-20">Next-gen image optimisation</h4>
           <div class="text-block-57">All images are resized, optimised and converted to WebP, a next gen image format that loads 35+% faster than JPEG for a better reader experience.</div>
         </div>
       </div>
-      <div class="div-block-1443"><img src="images/graphql.svg" loading="lazy" alt="" class="image-61">
+      <div class="div-block-1443"><img src="images/graphql.svg" loading="lazy" alt="GraphQL Logo" class="image-61">
         <div>
           <h4 class="heading-20">Coming soon: Public API Access</h4>
           <div class="text-block-57">Query &amp; mutate content using our upcoming public GraphQL API to build custom workflows.</div>
@@ -293,7 +293,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
