--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -427,7 +427,7 @@
     </div>
     <div class="w-layout-grid grid-2">
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/speedometer-outline.svg" loading="lazy" alt="A symbol of a speedometer" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/speedometer-outline.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Super-fast page loads</h5>
         <div class="all-plans-description">The fastest hosting on the internet via our Tier 1 Content Delivery Network, Amazon Cloudfront. 90+ Google Pagespeed? Count on it.</div>
       </div>
@@ -437,32 +437,32 @@
         <div class="all-plans-description">Your site will be snappy for the first or millionth concurrent visitor. Don&#x27;t worry about getting popular overnight.</div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/image--reference.svg" loading="lazy" alt="Symbol of image expanding" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/image--reference.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Next-gen image optimisation</h5>
         <div class="all-plans-description">Currently paying for image optimisation? Jraft&#x27;s native image optimisation is not only is free, it supports the nextgen image format, WebP, beating everything else.</div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/search-circle-outline.svg" loading="lazy" alt="A symbol of a search icon in a circle" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/search-circle-outline.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Advanced SEO controls</h5>
         <div class="all-plans-description">Automatic sitemaps, structured data, and robots.txt, custom page meta and URL structures, and automatic RPC pings for complete SEO control.</div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/Fonts.svg" loading="lazy" alt="Symbol of font" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/Fonts.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Built with typelovers in mind</h5>
         <div class="all-plans-description">Typography makes your content a lot more interesting. We believe that Type should be accessible easily, and we&#x27;ve curated hundreds of fonts by the best foundries and independent designers in the world.<br></div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/bx-data.svg" loading="lazy" alt="A symbol of a database" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/bx-data.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Own your data</h5>
         <div class="all-plans-description">At Jraft, we don&#x27;t believe in lock in. If we&#x27;re not the best solution for you, easily export all your content in a single, clean JSON file.</div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/bx-data.svg" loading="lazy" alt="A symbol of a database" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/bx-data.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">Easy WordPress Migration</h5>
         <div class="all-plans-description">Frustrated with using WordPress and having it burn a hole in your wallet? Easily migrate to Jraft using our open source WordPress plugin.</div>
       </div>
       <div>
-        <div class="pricing-more-features-image-parent"><img src="images/lock.svg" loading="lazy" alt="A symbol of a lock" class="image-35"></div>
+        <div class="pricing-more-features-image-parent"><img src="images/lock.svg" loading="lazy" alt="" class="image-35"></div>
         <h5 class="all-plans-titile">SSL and security built in</h5>
         <div class="all-plans-description">24/7 hosting monitoring &amp; SSL certificates means we’ll keep your site secure.</div>
       </div>
@@ -555,7 +555,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
