--- a/vs/medium.html
+++ b/vs/medium.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7acec2435056b1a826505b" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -86,7 +86,7 @@
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Medium</h1>
@@ -112,8 +112,8 @@
       <div class="comparision-row _1st-row">
         <div class="div-block-1446 _1st-column"></div>
         <div class="comparison-columns">
-          <div class="div-block-1446 comparision-rows"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft&#x27;s Logo coloured black" class="comparison-logo"></div>
-          <div class="div-block-1446 comparision-rows"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="" class="comparison-logo"></div>
+          <div class="div-block-1446 comparision-rows"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo" class="comparison-logo"></div>
+          <div class="div-block-1446 comparision-rows"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="Medium Logo" class="comparison-logo"></div>
         </div>
       </div>
       <div class="comparision-row white">
@@ -122,12 +122,12 @@
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft&#x27;s Logo coloured black"></div>
+            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo"></div>
             <div class="emoticon green">｡◕ ‿ ◕｡</div>
             <div class="text-block-59">With Jraft, your content is yours. Setup a custom domain and design and build a publication of your dreams, and with best-in-class SEO and optimisation, ensure the world reads it.</div>
           </div>
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="" class="image-67 wordpress"></div>
+            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="Medium Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻</div>
             <div class="text-block-59">Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work.<br></div>
           </div>
@@ -139,12 +139,12 @@
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft&#x27;s Logo coloured black"></div>
+            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">From our article board to real-time editing, Jraft is built from the ground up to be collaborative.</div>
           </div>
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="" class="image-67 wordpress"></div>
+            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="Medium Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻</div>
             <div class="text-block-59">Medium was built for individuals and lacks any form of collaboration.</div>
           </div>
@@ -156,12 +156,12 @@
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft&#x27;s Logo coloured black"></div>
+            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">Jraft&#x27;s component based approach is specifically designed for building publications. With over 100+ templates, you can customise everything visually.</div>
           </div>
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="" class="image-67 wordpress"></div>
+            <div class="div-block-1449"><img src="../images/Medium-Wordmark.svg" loading="lazy" alt="Medium Logo" class="image-67 wordpress"></div>
             <div class="emoticon red">(╯°□°)╯︵ ┻━┻</div>
             <div class="text-block-59">You can&#x27;t design content at all with Medium — your brand and content looks the same as every other post on Medium.</div>
           </div>
@@ -173,12 +173,12 @@
         </div>
         <div class="comparison-columns">
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft&#x27;s Logo coloured black"></div>
+            <div class="div-block-1449"><img src="../images/logo-black.svg" loading="lazy" alt="Jraft Logo"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">Simple on-page editing, minimal UI. Jraft is probably the most easy to learn yet powerful CMS ever designed.</div>
           </div>
           <div class="div-block-1446 comparision-rows">
-            <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="" class="image-67 wordpress"></div>
+            <div class="div-block-1449"><img src="../images/WordPress.svg" loading="lazy" alt="WordPress Logo" class="image-67 wordpress"></div>
             <div class="emoticon green">＼(＾O＾)／</div>
             <div class="text-block-59">The most loved feature of Medium is the editor, and Jraft has the exact same editor, but better.</div>
           </div>
@@ -211,14 +211,14 @@
     <h2 class="heading-10">More comparisons</h2>
     <div class="div-block-1397">
       <a href="../vs/medium.html" aria-current="page" class="other-features-parent comparisons w-inline-block w--current">
-        <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="The WordPress logo" class="image-66"></div>
+        <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">WordPress</h4>
           <div class="text-block-45">With powerful collaboration features, comparing Jraft and WordPress is like comparing Notepad and Google Docs.</div>
         </div>
       </a>
       <a href="../vs/wix.html" class="other-features-parent comparisons w-inline-block">
-        <div class="other-image-parent comparison"><img src="../images/wix-logo.svg" loading="lazy" alt="The Wix Logo" class="image-66"></div>
+        <div class="other-image-parent comparison"><img src="../images/wix-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">Wix</h4>
           <div class="text-block-45">It&#x27;s a professional publishing platform with a robust CMS facing up against a drag-and-drop tool. Is there even a contest?</div>
@@ -256,7 +256,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="../images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
