--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -86,7 +86,7 @@
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wordpress</h1>
@@ -445,7 +445,7 @@
       <p class="paragraph">On top of that, you’d often discover in the process that some key plugin of yours had gone zombie (that is, wasn’t being maintained anymore), leaving you with the always-enjoyable task of having to find a (hopefully free!) replacement.<br></p>
       <p class="paragraph">Great memories here.<br></p>
       <p class="paragraph">And don’t even get me started on child themes.<br></p>
-      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 87vw, 936px" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" alt="" class="image-57">
+      <h3 class="blog-headings h3">The cost of (poor) WordPress performance</h3><img src="../images/WP-Google-Search.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 87vw, 936px" srcset="../images/WP-Google-Search-p-500.png 500w, ../images/WP-Google-Search-p-800.png 800w, ../images/WP-Google-Search-p-1080.png 1080w, ../images/WP-Google-Search.png 1322w" alt="Google suggested searches for term: &#x27;WordPress&#x27;" class="image-57">
       <p class="paragraph">Yep, that&#x27;s a real screenshot of search suggestions on Google.<br></p>
       <p class="paragraph">In 2009, Google conducted a great experiment where they observed how likely a user was to leave a page, or &#x27;bounce&#x27;, if the site was slow. What they found was that <a href="https://www.marketingdive.com/news/google-53-of-mobile-users-abandon-sites-that-take-over-3-seconds-to-load/426070/" class="blog-link">53% of mobile users don&#x27;t read articles that take more than 3 seconds to load.</a> What&#x27;s more concerning, is the average WordPress publication takes a full 14 seconds to load.<br></p>
       <p class="paragraph">This doesn’t just damage people’s experience <em>on your site</em>. Google today includes page speed as a ranking factor in their algorithm, so if your site&#x27;s slow, you&#x27;re not only providing a bad experience for those who do find you — you’re lessening the chance they’ll find you in the first place.<br></p>
@@ -488,14 +488,14 @@
     <h2 class="heading-10">More comparisons</h2>
     <div class="div-block-1397">
       <a href="../vs/wordpress.html" class="other-features-parent comparisons w-inline-block">
-        <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="The WordPress logo" class="image-66"></div>
+        <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">WordPress</h4>
           <div class="text-block-45">With powerful collaboration features, comparing Jraft and WordPress is like comparing Notepad and Google Docs.</div>
         </div>
       </a>
       <a href="../vs/medium.html" class="other-features-parent comparisons w-inline-block">
-        <div class="other-image-parent comparison"><img src="../images/Medium.svg" loading="lazy" alt="" class="image-66"></div>
+        <div class="other-image-parent comparison"><img src="../images/Medium.svg" loading="lazy" alt="Medium Logomark" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">Medium</h4>
           <div class="text-block-45">Jraft is a powerful alternative to Medium which allows you to control your content and publish at scale.</div>
@@ -533,7 +533,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="../images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="../images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="../images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
