--- a/manage.html
+++ b/manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:13:19 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft&#x27;s Logo coloured black" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -62,7 +62,7 @@
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
           <div class="button-blackbg-bold">Join Beta</div>
         </a>
-        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="Menu symbol" class="menu-icon"></div>
+        <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
       </div>
     </div>
     <div class="nav">
@@ -96,7 +96,7 @@
           <div class="launching-soon">Launching Soon</div>
         </div>
       </div>
-      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 479px) 93vw, (max-width: 767px) 92vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="" class="image-53"></div>
+      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 479px) 93vw, (max-width: 767px) 92vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="Jraft&#x27;s management features overlaid over Google Docs" class="image-53"></div>
     </div>
   </div>
   <div class="feature-section _5">
@@ -147,21 +147,21 @@
       </div>
       <div class="div-block-1395-copy">
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/events.svg" loading="lazy" alt="A symbol illustrating multiple people standing together"></div>
+          <div class="div-block-1407"><img src="images/events.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Individual desk permissions<br></h4>
             <div class="text-block-43">In Jraft, articles are organised into ‘newsdesks’ or content categories, with their own individualised user permissions. Ensure people only edit what they should.<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/filter--edit.svg" loading="lazy" alt="Symbol of a filter"></div>
+          <div class="div-block-1407"><img src="images/filter--edit.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Powerful search and filter<br></h4>
             <div class="text-block-43">Have 50,000 articles? Forget fiddling around with search that misses queries or is overly complex. Jraft’s unibar search can find you anything — instantly.<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/search-circle-outline.svg" loading="lazy" alt="A symbol of a search icon in a circle"></div>
+          <div class="div-block-1407"><img src="images/search-circle-outline.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Perfect SEO — without plugins<br></h4>
             <div class="text-block-43">Jraft has all the fundamental technical modern SEO features built in. Metadata controls, automatic XML sitemaps, RPC pings, robots.txt + more — no plugins necessary.<br></div>
@@ -177,7 +177,7 @@
     <div class="div-block-13">
       <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/word-press-logo.svg" loading="lazy" alt="The WordPress logo"></div>
+          <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">WordPress</h4>
@@ -186,7 +186,7 @@
       <div class="div-block-30"></div>
       <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
-          <div><img src="images/wix-logo.svg" loading="lazy" alt="The Wix Logo"></div>
+          <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
         <h4 class="heading">Wix</h4>
@@ -254,7 +254,7 @@
       <div class="div-block-1402">
         <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="" class="image-68"></a></div>
+          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
