--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 13 2020 06:39:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Oct 13 2020 11:16:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7fc79e87f0f55e821081d7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -30,6 +30,8 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+  <!--  flying pages script  -->
+  <script src="flying-pages.min.js"></script>
 </head>
 <body>
   <div class="utility-page-wrap">
