--- a/pricing.html
+++ b/pricing.html
@@ -15,16 +15,13 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/jraft-landing.webflow.css" rel="stylesheet" type="text/css">
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>.anti-flicker-hide { opacity: 0 !important}</style>
   <script type="text/javascript">(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};(a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;})(window,document.documentElement,'anti-flicker-hide','dataLayer',4000,{'OPT-W8NZSFV':true});</script>
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-141202928-2"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-141202928-2', {'anonymize_ip': false, 'optimize_id': 'OPT-W8NZSFV'});</script>
   <script type="text/javascript">!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.agent='plwebflow';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');fbq('init', '669556453669016');fbq('track', 'PageView');</script>
-  <script src="webflow.js" defer=""></script>
   <!--  Hotjar Tracking Code for www.tryjraft.com  -->
   <script>
     (function(h,o,t,j,a,r){
@@ -36,8 +33,6 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-  <!--  flying pages script  -->
-  <script src="flying-pages.min.js"></script>
   <!-- This Loads the Light Theme Style -->
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@4/themes/light.css">
 </head>
@@ -593,23 +588,12 @@
       <div class="footer-copyright-notice">© 2020 Albion Media Pty Ltd. All rights reserved.</div>
     </div>
   </footer>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <!-- These Loads Scripts -->
-  <script src="https://unpkg.com/popper.js@1"></script>
-  <script src="https://unpkg.com/tippy.js@4"></script>
-  <!-- Tippy JS Settings -->
-  <script>
-tippy('.tippy', {             // Use class or id
-  animation: 'fade',         // See docs for more options (there are a few nice ones 😉)
-  duration: 200,              // Duration for ToolTip Animation
-  arrow: true,                // Add ToolTip Arrow
-  delay: [100, 400],             // First # = delay in, second # = delay out
-  arrowType: 'round',         // Sharp or 'round' or remove for none
-  theme: 'light',             // Dark is the default
-  maxWidth: 220,              // Max width in pixels for the tooltip
-})
-</script>
+  <script src="js/gtag.min.js" defer></script>
+  <script src="js/flying-pages.min.js" defer></script>
+  <script src="js/jquery-3.5.1.min.js" defer></script>
+  <script src="js/webflow.js" defer></script>
+  <script src="js/popper-1.16.1.min.js" defer></script>
+  <script src="js/tippy-4.3.5.min.js" defer></script>
+  <script src="js/tippy-init.js" defer></script>
 </body>
 </html>
